k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rmc-backend-deployment
    namespace: rmc-be
spec:
    replicas: 2
    selector:
        matchLabels:
            app: rmc-backend
    template:
        metadata:
          name: rmc-backend-pod
          namespace: rmc-be
          labels:
            app: rmc-backend
        spec:
          containers:
            - name: rmc-backend-container
              image: kunalaggarwal05/rmc-be:latest
              imagePullPolicy: Always
              ports:
                - containerPort: 9091
              startupProbe:
                httpGet:
                  path: /actuator/health
                  port: 9091
                initialDelaySeconds: 40
                periodSeconds: 10
                timeoutSeconds: 5
                failureThreshold: 30
              readinessProbe:
                httpGet:
                  path: /actuator/health
                  port: 9091
                initialDelaySeconds: 20
                periodSeconds: 10
                timeoutSeconds: 5
                failureThreshold: 3
              livenessProbe:
                httpGet:
                  path: /actuator/health
                  port: 9091
                initialDelaySeconds: 60
                periodSeconds: 15
                timeoutSeconds: 5
                failureThreshold: 3
