k8s/service-reg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-reg-deployment
  namespace: rmc-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-reg
  template:
    metadata:
      name: service-reg-pod
      namespace: rmc-be
      labels:
        app: service-reg
    spec:
      containers:
        - name: service-reg-container
          image: kunalaggarwal05/service-reg:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
