k8s/warmc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warmc-backend-deployment
  namespace: rmc-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: warmc-backend
  template:
    metadata:
      name: warmc-backend-pod
      namespace: rmc-be
      labels:
        app: warmc-backend
    spec:
      containers:
        - name: warmc-backend-container
          image: kunalaggarwal05/warmc-be:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 9092
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9092
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9092
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
