k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: rmc-be
spec:
  selector:
    app: rmc-backend
  ports:
  - port: 9091
    targetPort: 9091
