k8s/warmc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: warmc-service
  namespace: rmc-be
spec:
  selector:
    app: warmc-backend
  ports:
    - port: 80
      targetPort: 9092
